# YggdrasilAI

./: .gitattributes  .gitignore  LICENSE-MIT  README.md  RELEASE-1.0.md  RELEASE-1.1.md  RELEASE-1.2.md  RELEASE-1.4.md  RELEASE-1.5.md  ROADMAP.md  Yggdrasil OS Whitepaper.doc  Yggdrasil OS Whitepaper.docx
agent-template/: README.md  manifest.toml  notes_agent.py
branding/: README.md
docs/: ARCHITECTURE.md  MODULES.md  SETUP-debian-box.md
ops/: post-update.sh  thoros-downloads  upgrade.sh
registry/: index.json
scripts/: provision-debian.sh
updates/: latest.json
website/: donate.html  features.html  guide.html  index.html  style.css  vision.html
yggdrasil/: README.md  pyproject.toml
yggdrasil-iso/: README.md
yggdrasil-iso/auto/: config
yggdrasil-iso/config/hooks/normal/: 0500-install-app.hook.chroot  0600-install-ollama.hook.chroot  0700-enable-firstboot.hook.chroot  0750-enable-ssh.hook.chroot  0760-updates.hook.chroot  0770-software-install.hook.chroot  0800-dconf-update.hook.chroot
yggdrasil-iso/config/includes.chroot/etc/gdm3/: daemon.conf
yggdrasil-iso/config/includes.chroot/etc/pipewire/pipewire.conf.d/: 99-yggdrasil-echo-cancel.conf
yggdrasil-iso/config/includes.chroot/etc/sudoers.d/: yggdrasil-install  yggdrasil-power  yggdrasil-update
yggdrasil-iso/config/includes.chroot/etc/systemd/system/: regen-ssh-host-keys.service  yggdrasil-firstboot.service  yggdrasil-firstboot.timer  yggdrasil-preload.service
yggdrasil-iso/config/includes.chroot/etc/systemd/user/: yggdrasil-update-check.service  yggdrasil-update-check.timer
yggdrasil-iso/config/includes.chroot/etc/xdg/autostart/: yggdrasil-hud.desktop  yggdrasil-jarvis.desktop  yggdrasil-update-check.desktop  yggdrasil-welcome.desktop
yggdrasil-iso/config/includes.chroot/usr/local/sbin/: yggdrasil-firstboot.sh  yggdrasil-install  yggdrasil-power  yggdrasil-update
yggdrasil-iso/config/includes.chroot/usr/share/applications/: yggdrasil-chat.desktop  yggdrasil-dashboard.desktop  (+3 more)
yggdrasil-iso/config/package-lists/: desktop.list.chroot  yggdrasil.list.chroot
yggdrasil/src/yggdrasil/: __init__.py  __main__.py  app.py  cli.py  sdk.py
yggdrasil/src/yggdrasil/agents/: app_agent.py  base.py  browser_agent.py  command_agent.py  dev_agent.py  document_agent.py  explain_agent.py  file_agent.py  focus_agent.py  help_agent.py  market_agent.py  memory_agent.py  model_agent.py  research_agent.py  scheduler_agent.py  security_agent.py  software_agent.py  system_agent.py  task_agent.py  update_agent.py  vision_agent.py  voice_agent.py  writer_agent.py
yggdrasil/src/yggdrasil/core/: activity.py  browsing.py  bus.py  config.py  context.py  focus.py  jobs.py  journal.py  llm.py  memory.py  mission.py  models.py  modules.py  orchestrator.py  permissions.py  registry.py  resolve.py  sandbox.py  sandbox_runner.py  scheduler.py  screen.py  sentinel.py  trace.py  transcript.py  updater.py  voices.py  webdriver.py
yggdrasil/src/yggdrasil/ui/: chat.py  dashboard.py  help.py  hud.py  mission.py  schedule.py  settings.py  status.py  tasks.py  updater.py  voices.py  welcome.py
yggdrasil/src/yggdrasil/voice/: loop.py  stt.py  tts.py
yggdrasil/tests/: test_duplex.py  test_file_agent.py  test_jobs.py  test_routing.py  test_smart_help.py  test_software.py  test_sysinfo.py  test_verbosity.py  test_vision.py
(+2 files in other folders)
