[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "yggdrasil"
version = "0.0.1"
description = "Yggdrasil OS — AI-first, local-first agent runtime"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",      # OllamaProvider HTTP client
]

[project.optional-dependencies]
# Installed on the Debian box for the real voice loop (Phase 1).
voice = [
    "faster-whisper>=1.0", # STT (CPU base.en; GPU large-v3-turbo optional)
    "piper-tts>=1.2",      # TTS
    "sounddevice>=0.4",    # mic capture / playback
    "numpy>=1.26",         # endpointing is energy-based (no PyTorch/webrtcvad needed)
]
# Optional: the classic openWakeWord wake mode. It pulls tflite-runtime, which has NO Python 3.13
# wheel, so it's kept OUT of [voice]. The default "name" wake mode wakes on the spoken name via
# Whisper STT and needs none of this (see core/config.py wake_mode).
wakeword = [
    "openwakeword>=0.4",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
yggdrasil = "yggdrasil.cli:main"
yggdrasil-voice = "yggdrasil.voice.loop:main"
yggdrasil-warden = "yggdrasil.core.sentinel:main"
# Note: the GTK UIs (dashboard, chat) are launched via /usr/local/bin wrappers using the SYSTEM
# python3 (which has PyGObject/gi) + PYTHONPATH — not venv console scripts, since gi isn't in the venv.

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
